# poc-esp32-hvcc-i2s

./: .gitignore  README.md  c2espidf.py  example_hvcc_generator.py  export.sh  requirements.txt
c2espidf/templates/: main_CMakeLists.txt.j2  poc_esp32_hvcc_i2s.c.j2  root_CMakeLists.txt.j2
main/: CMakeLists.txt  adc.cpp  adc.h  hv_bridge.cpp  hv_bridge.h  hv_config.h  ime-embarcados-lib.cpp  poc_esp32_hvcc_i2s.c  switch.cpp  switch.h  test.pd
main/hvcc/c/: Heavy_heavy.cpp  Heavy_heavy.hpp  Heavy_mySynth.cpp  Heavy_mySynth.h  Heavy_mySynth.hpp  HvMessage.c  HvUtils.h
main/hvcc/hv/: _main.hv.json  test.hv.json
main/hvcc/ir/: heavy.heavy.ir.json  mySynth.heavy.ir.json  test.gui.json
main/pd/: _main.pd
scripts/: hvcc.sh  setup-python.sh
